--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Hey, I'm Melissa Castro but I generally go by Melia. I'm a software developer, an adventurer, a singer, and
+            a forever learner. I currently live in Boise Idaho and I absolutely love how many outdoor sports and
+            activities are available to me in such close proximity. </p>
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-pic.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-pic.jpg" class="img-fluid rounded" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Full-Stack Web Developer.</h3>
-            <p class="font-italic"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. </p>
+            <p class="font-italic"> I'd love to hear from you, so I've left you some ways to contact me! </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -98,55 +97,17 @@
                 </ul>
               </div>
             </div>
-            <p> Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis. Cupiditate ut dicta maxime officiis
-              quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat
-              cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores. </p>
+            <p> Lover of experience and creating great memories. I'm an extremely passionate creative and am excited to
+              continue growing and learning. Being a software engineer pushes me to reach higher and higher daily, face
+              challenges often, and really step out of my comfort zone. I love the feeling of creating something out of
+              nothing and knowing the challenges I've overcome along the way. Being a woman in the field and knowing
+              that I have the great opportunity to not only grow myself but to encourage others to reach for dreams that
+              may not have thought possible for themselves absolutely lights me up inside. </p>
           </div>
         </div>
       </div>
     </section><!-- End About Section -->
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container" data-aos="fade-up">
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-              <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p>Happy Clients</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-            <div class="count-box">
-              <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
-              <p>Projects</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1,463</span>
-              <p>Hours Of Support</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p>Hard Workers</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Facts Section -->
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
@@ -256,6 +217,11 @@
               <div class="">
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">Git branching & merging </span>
+              <div class="">
+              </div>
+            </div>
           </div>
           <div class="col-lg-3">
             <b class="skill mb-2">Personal Skills</b>
@@ -285,6 +251,11 @@
             </div>
             <div class="progress">
               <span class="skill">Problem-Solving </span>
+              <div class="">
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Creativity </span>
               <div class="">
               </div>
             </div>
@@ -523,7 +494,7 @@
       </div>
     </section><!-- End Portfolio Section -->
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Services</h2>
@@ -620,7 +591,8 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
@@ -693,21 +665,21 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Boise, ID </p>
               </div>
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>mmcstr8@gmail.com</p>
               </div>
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>541 606 4672</p>
               </div>
             </div>
           </div>
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
@@ -738,7 +710,7 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End Contact Section -->
@@ -755,9 +727,9 @@
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
-      <div class="copyright"> &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. 
+      <!-- <div class="copyright"> &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved </div>
+      <div class="credits"> -->
+      <!-- All the links in the footer should remain intact. 
         <!-- You can delete the links only if you purchased the pro version. 
         <!-- Licensing information: [license-url] 
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ 
@@ -765,22 +737,22 @@
       </div>
     </div>
   </footer><!-- End Footer -->
-        <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
-        <div id="preloader"></div>
-        <!-- Vendor JS Files -->
-        <script src="assets/vendor/jquery/jquery.min.js"></script>
-        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-        <script src="assets/vendor/php-email-form/validate.js"></script>
-        <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-        <script src="assets/vendor/counterup/counterup.min.js"></script>
-        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-        <script src="assets/vendor/venobox/venobox.min.js"></script>
-        <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-        <script src="assets/vendor/typed.js/typed.min.js"></script>
-        <script src="assets/vendor/aos/aos.js"></script>
-        <!-- Template Main JS File -->
-        <script src="assets/js/main.js"></script>
+      <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
+      <div id="preloader"></div>
+      <!-- Vendor JS Files -->
+      <script src="assets/vendor/jquery/jquery.min.js"></script>
+      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+      <script src="assets/vendor/php-email-form/validate.js"></script>
+      <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+      <script src="assets/vendor/counterup/counterup.min.js"></script>
+      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="assets/vendor/venobox/venobox.min.js"></script>
+      <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+      <script src="assets/vendor/typed.js/typed.min.js"></script>
+      <script src="assets/vendor/aos/aos.js"></script>
+      <!-- Template Main JS File -->
+      <script src="assets/js/main.js"></script>
 </body>
 
 </html>
