--- a/index.html
+++ b/index.html
@@ -268,55 +268,62 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Enjoys creating solutions when faced with new challenges and learning new ways to overcome barriers. Proven
+            success in rapidly learning new concepts, technologies, and development techniques during a Full-Stack
+            application building process. Strong background in personal development coaching, sales, and customer
+            service lends the ability to build solid relationships with clients, coworkers, and consumers.</p>
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+              <h4>Melissa (Melia) Castro</h4>
+              <p><em>Full-Stack Software Developer, experienced in working with teams of developers as well as
+                  independently to find innovative solutions while building creative user friendly applications.</em>
+              </p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Boise, ID</li>
+                <li>(541) 606-4672</li>
+                <li>mmcstr8@gmail.com</li>
               </ul>
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Full-Stack Software Development</h4>
+              <h5>2021</h5>
+              <p><em>Boise Codeworks, Boise, ID</em></p>
+              <ul>
+                <li> 13 week immersive course providing 500+ hours of hands on experience learning, building
+                  applications and utilizing best practices in software development </li>
+                <li> Designed and developed several full stack applications </li>
+                <li> Implemented Scrum methods to plan applications with developer teams </li>
+                <li> Collaborated weekly to implement pair programming </li>
+              </ul>
             </div>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
               <h5>2010 - 2014</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
                 unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
                 dila</p>
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Direct Sales Specialist</h4>
+              <!-- <h5>2019 - Present</h5> -->
+              <p><em>Boise, ID </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                  communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                  project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                  design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Worked independently to communicate with customers and consistently reach monthly sales goals of
+                  $75,000+</li>
+                <li>Recommended and consulted with clients on different options available to them most that best fit
+                  their remodeling/repair needs</li>
+                <li>Coordinated same day contract negotiations and closed high ticket deals while ensuring optimal
+                  client experience </li>
+                <li>Collaborated with new hires to allow for job shadowing where they would learn new techniques and
+                  implement effective communication skills before striking out on their own</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -324,11 +331,13 @@
               <h5>2017 - 2018</h5>
               <p><em>Stepping Stone Advertising, New York, NY</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                  advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Worked in direct contact with clients and coordinated responsibilities with coworkers to ensure
+                  completion of all tasks along with client satisfaction</li>
+                <li>Ranked #1 top salesperson in the region in 2020 </li>
+                <li>Consistently ranked top service sales at designated location </li>
+                <li>Helped location which was established for 5 years reach top sales for all of treasure valley for the
+                  first time since opening</li>
+                <li>Received customer service award based on customer reviews </li>
               </ul>
             </div>
           </div>
@@ -340,9 +349,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Check out some of the applications I've built recently! I've left them here for you below.</p>
         </div>
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
