--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Proven success in rapidly learning new concepts, technologies, and development techniques during a
+            Full-Stack application building process.</p>
         </div>
         <div class="row skills-content">
           <div class="col-lg-3">
@@ -268,10 +267,11 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Enjoys creating solutions when faced with new challenges and learning new ways to overcome barriers. Proven
-            success in rapidly learning new concepts, technologies, and development techniques during a Full-Stack
-            application building process. Strong background in personal development coaching, sales, and customer
-            service lends the ability to build solid relationships with clients, coworkers, and consumers.</p>
+          <p>Enjoys creating solutions when faced with new challenges and learning new ways to overcome barriers.
+            Experience in building Full-Stack applications, working with teams of developers, and effectively and
+            efficiently applying newly acquired knowledge. Strong background in personal development coaching, sales,
+            and customer service lends the ability to build solid relationships with clients, coworkers, and consumers.
+          </p>
         </div>
         <div class="row">
           <div class="col-lg-6">
@@ -726,13 +726,13 @@
   <footer id="footer">
     <div class="container">
       <h3>Melia Castro</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Courage is not the absense of fear, it is acting in spite of it.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#https://twitter.com/IMpowermentNet" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="#https://www.linkedin.com/in/melia-maria/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <!-- <div class="copyright"> &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved </div>
       <div class="credits"> -->
