portfolio details added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
   <!-- Vendor CSS Files -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -42,7 +45,7 @@
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        <!-- <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -54,11 +57,11 @@
       <p>I'm a <span class="typed"
           data-typed-items=" Full-stack software developer, lover of outdoors, passionate adventurer"></span></p>
       <div class="social-links">
-        <a href="#https://twitter.com/IMpowermentNet" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+        <a href="https://twitter.com/IMpowermentNet" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://github.com/Melia88" class="github"><i class="fab fa-github"></i></a>
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="#https://www.linkedin.com/in/melia-maria/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/melia-maria/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -290,7 +293,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Full-Stack Software Development</h4>
-              <h5>2021</h5>
+              <!-- <h5>2021</h5> -->
               <p><em>Boise Codeworks, Boise, ID</em></p>
               <ul>
                 <li> 13 week immersive course providing 500+ hours of hands on experience learning, building
@@ -314,7 +317,7 @@
             <div class="resume-item">
               <h4>Direct Sales Specialist</h4>
               <!-- <h5>2019 - Present</h5> -->
-              <p><em>Boise, ID </em></p>
+              <p><em>Dabella, Boise, ID </em></p>
               <ul>
                 <li>Worked independently to communicate with customers and consistently reach monthly sales goals of
                   $75,000+</li>
@@ -327,9 +330,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Stylist/Ambassador</h4>
+              <!-- <h5>2017 - 2018</h5> -->
+              <p><em>SportClips, Boise, ID</em></p>
               <ul>
                 <li>Worked in direct contact with clients and coordinated responsibilities with coworkers to ensure
                   completion of all tasks along with client satisfaction</li>
@@ -338,6 +341,7 @@
                 <li>Helped location which was established for 5 years reach top sales for all of treasure valley for the
                   first time since opening</li>
                 <li>Received customer service award based on customer reviews </li>
+                <li>Trained as an ambassador to conducting event presentations and recruitment</li>
               </ul>
             </div>
           </div>
@@ -355,21 +359,21 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Front-End</li>
+              <!-- <li data-filter=".filter-card">Card</li> -->
+              <li data-filter=".filter-web">Full-Stack</li>
             </ul>
           </div>
         </div>
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/inspire (2).png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox"
+                  <a href="assets/img/portfolio/inspire (2).png" data-gall="portfolioGallery" class="venobox"
                     title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -379,25 +383,40 @@
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/bugger.home.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Full-Stack 3</h4>
+                <p>Full-Stack</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox"
+                  <a href="assets/img/portfolio/bugger.hide.jpg" data-gall="portfolioGallery" class="venobox"
                     title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  <a href="portfolio-details2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/keeper.noteDet.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Full-Stack 3</h4>
+                <p>Full-Stack</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/keeper.noteDet.png" data-gall="portfolioGallery" class="venobox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                    class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Front-End</h4>
+                <p>Front-End</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox"
                     title="App 2"><i class="bx bx-plus"></i></a>
@@ -406,8 +425,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          </div> -->
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -496,7 +515,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End Portfolio Section -->
@@ -601,7 +620,7 @@
     </section> -->
     <!-- End Services Section -->
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Testimonials</h2>
@@ -659,7 +678,8 @@
           </div>
         </div>
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
@@ -728,11 +748,11 @@
       <h3>Melia Castro</h3>
       <p>Courage is not the absense of fear, it is acting in spite of it.</p>
       <div class="social-links">
-        <a href="#https://twitter.com/IMpowermentNet" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="#https://www.linkedin.com/in/melia-maria/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/IMpowermentNet" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://github.com/Melia88" class="github"><i class="fab fa-github"></i></a>
+        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="https://www.linkedin.com/in/melia-maria/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <!-- <div class="copyright"> &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved </div>
       <div class="credits"> -->
