--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Inspire</title>
+  <title>Portfolio Details - Keeper</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Favicons -->
@@ -34,30 +34,30 @@
 <body>
   <main id="main">
     <!-- ======= Portfolio Details ======= -->
-    <section id="portfolio-details" class="portfolio-details">
+    <section id="portfolio-details3" class="portfolio-details">
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Inspire</h2>
+            <h2 class="portfolio-title">Keepr</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/inspire.log.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/Inspire.deck.png" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/inspire (2).png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/keeper.detailsPg.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/keeper.keeps.jpg" class="img-fluid" alt="">
+              <!-- <img src="assets/img/portfolio/inspire (2).png" class="img-fluid" alt=""> -->
             </div>
           </div>
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
+              <li><strong>Category</strong>: Full-Stack</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
-              <li><strong>Project date</strong>: April, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://melia88.github.io/checkpoint4/">www.github.com</a></li>
+              <li><strong>Project date</strong>: June, 2021</li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/Melia88/keepr">www.github.com</a></li>
             </ul>
-            <p> Inspiration can be difficult to achieve and this application was made to brings a feeling of peace with
-              gorgeous backrounds from around the world, while offering subtle inspirational quotes. It also allows
-              users to keep track of many important tasks and the weather (F & C) with the subtle help of a random daily
-              quote and beautiful scenery.</p>
-            <p> This application was built with HTML, MVCs, JavaScript and CSS3. </p>
+            <p> Keepr is a social network that allows users to visually share, and discover new interests by posting
+              images or videos to their own or others' collections (i.e. a collection of 'vaults,' usually with a common
+              theme) and browsing what other users have kept.</p>
+            <p> This application was built with VueJs frontend with Vue-Router to manage the dom, DotNet WebApi, Auth0,
+              Dapper as an ORM, C#, MySQL and SCSS. </p>
           </div>
         </div>
       </div>
