--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -51,7 +51,7 @@
               <li><strong>Category</strong>: Full-Stack</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <li><strong>Project date</strong>: June, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/Melia88/keepr">www.github.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://keeper-melia.herokuapp.com/">www.github.com</a></li>
             </ul>
             <p> Keepr is a social network that allows users to visually share, and discover new interests by posting
               images or videos to their own or others' collections (i.e. a collection of 'vaults,' usually with a common
